# ctwm-mirror

./: .bzrignore  .cvsignore  CHANGES  CHANGES.adoc  CHANGES.md  CMakeLists.txt  COPYRIGHT  Doxyfile.in  Imakefile  Imakefile.X11R4  Imakefile.local-template  LICENSE  Makefile  PROBLEMS  README  README.VMS  README.adoc  README.md  STYLE  STYLE.md  VERSION  add_window.c  add_window.h  alloca.c  animate.c  animate.h  captive.c  captive.h  clargs.c  clargs.h  clicktofocus.c  clicktofocus.h  colormaps.c  colormaps.h  ctopts.c  ctopts.h  ctwm.c  ctwm.h  ctwm.man  ctwm.spec  (+167 more)
client/: CMakeLists.txt  README.md  ctwm_client.h  demolib.c  gtw.c  libctwm.c
cmake_files/: basic_vars.cmake  build_env_checks.cmake  build_options.cmake  check_funcs_etc.cmake  compiler_feature_checks.cmake  cpack_setup.cmake  ctwm_cmake_vars.cmake  ctwm_install.cmake  do_install.cmake  doxygen.cmake  dtrace.cmake  dtrace_support.cmake  find_asciidoc_bits.cmake  gen_source_files.cmake  handle_manual.cmake  install_paths.cmake  mktar_support.cmake  setup_lex.cmake  setup_yacc.cmake  show_build_info.cmake  vcs_checks.cmake
doc/: Makefile  convert.pl  ctwm.1.adoc  ctwm.1.txt
doc/devman/: code_style.adoc  doxygen.adoc  functions.adoc  index.adoc  links.adoc  mkmk.sh  principles.adoc  rlayout.adoc
doc/manual/: ctwm.1.adoc
examples/: levitte.ctwmrc  peterc.ctwmrc
ext/: README
manual/: Makefile  convert.pl
minibuild/: README.md  defs.mk  gen_files.mk  main.mk  mkmk.sh  options.mk
tests/: CMakeLists.txt
tests/layout/: CMakeLists.txt  monitor_layout.ctwmrc  test_layout.c  test_monitor_layout.c
tests/menu_twmkeys/: mk_twmkeys_entry.c
tests/test_m4/: CMakeLists.txt  test_m4.c
tests/util_expand/: CMakeLists.txt  t_efp.c
tools/: ctwm.astyle  mk_ctf_info.sh  mk_deftwmrc.sh  mk_event_names.sh  mk_function_bits.sh  mk_tar.sh  mk_version_in.sh  rewrite_version_bzr.sh  rewrite_version_git.sh  try_all_opts.pl
xpm/: pixmap.xpm  welcome.xpm  xgopher.xpm
